--- a/404.html
+++ b/404.html
@@ -1,25 +1,9 @@
 ---
 permalink: /404.html
-layout: post
+layout: basic
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<article class="p-8 h-full mb-8">
+    <h3 class="text-xl font-bold text-white mt-6 mb-2">Page not found</h3>
+    <p class="text-base text-white">The requested page could not be found.</p>
+</article>
